--- a/src/Dockerfile.worker
+++ b/src/Dockerfile.worker
@@ -7,4 +7,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD celery --app main worker -E --autoscale 5 --loglevel=INFO
+ENTRYPOINT celery --app main worker -E --autoscale 5 --loglevel=INFO -Q $CELERY_QUEUES
+
